board-selec-players structured

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,7 @@
 }
 
 .content {
+
     display: flex;
     flex-direction: column;
     position: relative;
@@ -21,6 +22,7 @@
 }
 
 .main-tittle{
+
     display: flex;
     justify-content: space-between;
     z-index: 1;
@@ -30,6 +32,8 @@
     background-image: url("../svg/board-startGaming.svg");
     background-repeat: no-repeat;
     background-size: 100%;
+
+    display: none;
 }
 
 .options{
@@ -56,12 +60,13 @@
 
 .menu-options{
     background-color:#005BEA;
-    width: 400px;
+    width: 300px;
+    height: 34px;
     padding: 5px;
     text-align: center;
     border: none;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Courier, monospace;
     float:left;
     margin: 5px;
     cursor: pointer;
@@ -69,4 +74,42 @@
     font-weight: 900;
 }
 
+
+.players-selector{
+    border: solid 1px rgb(224, 217, 217);
+    border-radius: 55px;
+    background-color: white;
+    display: flex;
+    
+    align-self: center;
+    justify-self: center;
+    align-items: center;
+    flex-direction: column;
+    -webkit-border-radius: 55px;
+    -moz-border-radius: 55px;
+    -ms-border-radius: 55px;
+    -o-border-radius: 55px;
+}
+
+.inputPlayer{
+    width: 35rem;
+    height: 40px;
+    margin: 15px;
+    padding-left: 25px;
+}
+
+.title-players{
+    margin-bottom: 20px;
+    border-radius: 5px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 900;
+    font-size: 1.8rem;
+    background-color: #005BEA;
+    color: white;
+    padding: 40px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
 
