--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    scrollbar-color: #005BEA #cccdce;
+    scrollbar-width: thin;
 }
 
 .content {
@@ -15,13 +17,13 @@
     background-color: rgb(238, 246, 255);
 }
 
-.container-section{
+.container-section {
     position: absolute;
     width: 95%;
     height: 95%;
 }
 
-.main-tittle{
+.main-tittle {
 
     display: flex;
     justify-content: space-between;
@@ -36,30 +38,30 @@
     display: none;
 }
 
-.options{
+.options {
     display: flex;
     flex-direction: column;
     width: 40%;
     align-self: flex-end;
 }
 
-.info-title{
+.info-title {
     align-self: center;
     width: 45%;
     font-size: 2.5rem;
     color: white;
 }
 
-.text-tittle{
+.text-tittle {
     align-self: center;
     font-size: 4rem;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: 900;
     margin-bottom: 50px;
 }
 
-.menu-options{
-    background-color:#005BEA;
+.menu-options {
+    background-color: #005BEA;
     width: 300px;
     height: 34px;
     padding: 5px;
@@ -67,7 +69,7 @@
     border: none;
     color: white;
     font-family: Courier, monospace;
-    float:left;
+    float: left;
     margin: 5px;
     cursor: pointer;
     align-self: center;
@@ -75,12 +77,11 @@
 }
 
 
-.players-selector{
+.players-selector {
     border: solid 1px rgb(224, 217, 217);
     border-radius: 55px;
     background-color: white;
     display: flex;
-    
     align-self: center;
     justify-self: center;
     align-items: center;
@@ -89,16 +90,18 @@
     -moz-border-radius: 55px;
     -ms-border-radius: 55px;
     -o-border-radius: 55px;
+
+    display: none;
 }
 
-.inputPlayer{
+.inputPlayer {
     width: 35rem;
     height: 40px;
     margin: 15px;
     padding-left: 25px;
 }
 
-.title-players{
+.title-players {
     margin-bottom: 20px;
     border-radius: 5px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -113,3 +116,156 @@
     -o-border-radius: 5px;
 }
 
+.board-game {
+    display: grid;
+    grid-template-columns: 18% 82%;
+    grid-template-rows: 100%;
+}
+
+.name-players {
+    display: flex;
+    overflow-y: auto;
+    align-items: center;
+    flex-direction: column;
+    margin-right: 15px;
+    border: solid 2px rgba(128, 128, 128, 0.171);
+    background-color: rgb(245, 245, 245);
+    border-radius: 12px;
+    box-shadow: 18px 12px 12px 2px rgba(100, 100, 100, 0.5);
+    z-index: 1;
+}
+
+.enviroment-game {
+    display: grid;
+    grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+    grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
+    position: relative;
+    background: radial-gradient(ellipse, #005BEA, #00C6FB);
+    overflow: hidden;
+}
+
+.player {
+    border-bottom: solid 1px rgb(207, 207, 207);
+    width: 80%;
+    padding: 15px;
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-rows: 20% 20% 20% 20% 20%;
+
+}
+
+.namep {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+}
+
+.infop {
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 2;
+}
+
+.numberp {
+    grid-column-start: 5;
+    grid-row-start: 1;
+    grid-row-end: 5;
+    background-color: #005BEA;
+    color: white;
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.action-game {
+    padding: 10px;
+    z-index: 2;
+    display: grid;
+    grid-template-columns: repeat(20, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    box-shadow: 28px 22px 12px 2px rgba(0, 0, 0, 0.5);
+    background-color: rgba(255, 255, 255, 0.349);
+    grid-row-start: 2;
+    grid-row-end: 5;
+    grid-column-start: 2;
+    grid-column-end: 8;
+    grid-gap: 5px;
+}
+
+.square {
+    cursor: pointer;
+    z-index: 3;
+    background-color: tomato;
+    border: 1px solid black;
+}
+
+#S0,
+#S19,
+#S80,
+#S99 {
+    background-color: #00c5fb65;
+    border: none;
+}
+
+
+
+.letterInSquare{
+    background-color: white;
+    border: solid 1px tomato;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Definición de estilos por defaul */
+
+/* El fondo  */
+.bola {
+    position: absolute;
+    width: 154px;
+    height: 154px;
+    border-radius: 84px;
+    border: solid 1px white;
+    background: white;
+    box-shadow: inset -20px 20px 5px rgba(100, 100, 100, 0.5);
+}
+
+.positionA {
+    right: -50px;
+    top: -40px;
+    box-shadow: inset 20px -20px 5px rgba(100, 100, 100, 0.5);
+}
+
+.positionB {
+    left: 300px;
+    top: -50px;
+}
+
+.positionC {
+    left: 780px;
+    bottom: -55px;
+}
+
+.positionD {
+    left: -50px;
+    bottom: -55px;
+    box-shadow: inset -20px 20px 5px rgba(100, 100, 100, 0.5);
+}
