--- a/styles/styles.css
+++ b/styles/styles.css
@@ -72,10 +72,11 @@
     font-size: 20px;
     margin-top: 12px;
     font-family: Arial, sans-serif;
+    border-bottom: solid 4px #ffffff;
     cursor: pointer;
 }
 
-.menu-options:hover{
+.menu-options:hover {
     width: 210px;
     height: 44px;
 }
@@ -338,10 +339,11 @@
 
 .selector-value {
     top: 25px;
-    left: calc(50% - 10px);
+    left: calc(50% - 40px);
+    clip-path: polygon(51% 90%, 38% 0, 68% 0);
     position: absolute;
     background: linear-gradient(222deg, #1F1F1F, #787878);
-    width: 20px;
+    width: 80px;
     height: 100px;
     z-index: 2;
     border-radius: 0 0 12px 12px;
@@ -351,7 +353,7 @@
     -o-border-radius: 0 0 12px 12px;
 }
 
-.conten-interaction{
+.conten-interaction {
     z-index: 2;
     display: flex;
     flex-direction: column;
