FEAT(ButtonLetter) Add component

--- a/src/component/ButtonLetter/styles.module.css
+++ b/src/component/ButtonLetter/styles.module.css
@@ -1,17 +1,23 @@
 .button {
     all: unset;
-    background-color: #04181e3b;
+    background-color: var(--aside-primary-color);
     padding: 10px 15px;
-    margin: 8px auto;
     color: white;
     font-size: 20px;
-    font-weight: 700;
-    border-bottom: 3px solid white;
+    font-weight: 900;
     cursor: pointer;
     width: 20px;
     text-align: center;
+    border: outset 3px var(--aside-primary-color);
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
 
 .button:hover {
-    background-color: rgba(0, 255, 255, 0.323);
+    background-color: var(--aside-primary-color);
+    width: 35px;
+    height: 35px;
 }
